[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }