[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.8.1"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
entity = { path = "entity" }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = {version = "1.0.217", features = ["derive"]}

[workspace]
members = [".", "entity", "migration"]
