[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = {"version" = "0.8.1", features = ["macros"]}
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = {version = "1.0.217", features = ["derive"]}
tower-http = { version = "0.6.2", features = ["trace","cors", "compression-gzip", "request-id", "timeout"]}
tower = "0.5.2"
axum-login = "0.17.0"
password-auth = "1.0.0"
thiserror = "2.0.12"

[workspace]
members = [".", "entity", "migration"]
